--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+html, body {
+  margin: 0;
+  padding: 0
+}
+
 .footer{
   position: absolute;
   bottom: 0;
@@ -8,9 +13,10 @@
 
 .App {
   text-align: center;
+  width: 100%;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -19,9 +25,9 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -30,17 +36,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
