--- a/src/components/counter/Counter.css
+++ b/src/components/counter/Counter.css
@@ -1,10 +1,10 @@
-button {
+/* button {
     background-color: green;
     font-size : 16px;
     padding: 15px 30px;
     color: white;
     width: 100px;
-}
+} */
 
 .count {
     font-size : 150px;
